--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -429,13 +429,13 @@ article img {
 }
 
 //Events
-.tg  {border-collapse:collapse;border-color:#93a1a1;border-spacing:0;}
-.tg td{background-color:#fdf6e3;border-color:#93a1a1;border-style:solid;border-width:1px;color:#002b36;
+.events  {border-collapse:collapse;border-color:#93a1a1;border-spacing:0;}
+.events td{background-color:#fdf6e3;border-color:#93a1a1;border-style:solid;border-width:1px;color:#002b36;
   font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{background-color:#657b83;border-color:#93a1a1;border-style:solid;border-width:1px;color:#fdf6e3;
+.events th{background-color:#657b83;border-color:#93a1a1;border-style:solid;border-width:1px;color:#fdf6e3;
   font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-12h1{border-color:inherit;font-family:"Comic Sans MS", cursive, sans-serif !important;text-align:left;vertical-align:top}
-.tg .tg-abk0{font-family:"Comic Sans MS", cursive, sans-serif !important;text-align:left;vertical-align:top}
+.events .events-12h1{border-color:inherit;font-family:"Comic Sans MS", cursive, sans-serif !important;text-align:left;vertical-align:top}
+.events .events-abk0{font-family:"Comic Sans MS", cursive, sans-serif !important;text-align:left;vertical-align:top}
 
 @import "utility";
 
