--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -437,6 +437,10 @@ article img {
 .events .events-12h1{border-color:inherit;font-family:"Comic Sans MS", cursive, sans-serif !important;text-align:left;vertical-align:top}
 .events .events-abk0{font-family:"Comic Sans MS", cursive, sans-serif !important;text-align:left;vertical-align:top}
 
+.event-text {
+  display: inline-block;
+  margin-left: 8px;
+}
 @import "utility";
 
 // Libraries
