--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -440,7 +440,7 @@ article img {
 .event-text {
   display: inline-block;
   margin-left: 8px;
-  text-align: center;
+  vertical-align: middle;
 }
 @import "utility";
 
