--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -437,9 +437,11 @@ article img {
 .events .events-12h1{border-color:inherit;font-family:"Comic Sans MS", cursive, sans-serif !important;text-align:left;vertical-align:top}
 .events .events-abk0{font-family:"Comic Sans MS", cursive, sans-serif !important;text-align:left;vertical-align:top}
 
-.event-text {
+.event-1 {
   display: inline-block;
   margin-left: 8px;
+}
+.event-2 {
   vertical-align: middle;
 }
 @import "utility";
