--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -452,6 +452,12 @@ article img {
 .events-health .events-health-xls6{background-color:#FFF;border-color:inherit;color:#333;text-align:left;vertical-align:middle}
 .events-health .events-health-0pky{border-color:inherit;text-align:left;vertical-align:top}
 
+.global-events  {border-collapse:collapse;border-color:#93a1a1;border-spacing:0;}
+.global-events td{background-color:#fdf6e3;border-color:#93a1a1;border-style:solid;border-width:1px;color:#002b36;
+  font-family:Arial, sans-serif;font-size:14px;overflow:hidden;padding:10px 5px;word-break:normal;}
+.global-events th{background-color:#657b83;border-color:#93a1a1;border-style:solid;border-width:1px;color:#fdf6e3;
+  font-family:Arial, sans-serif;font-size:14px;font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.global-events .tg-0lax{text-align:left;vertical-align:top}
 @import "utility";
 
 // Libraries
