--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -221,7 +221,7 @@ article figure {
   text-align: center;
   figcaption {
     font-size: var(--font-size-small);
-    color: var(--text-color-meta);
+    color: var(255, 255, 255);
     margin-top: 5px;
   }
 }
