--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -11,7 +11,7 @@ $breakpoint-xl: 1200px;
     monospace;
   --font-size-small: 12px;
 
-  --home-link-color: #e8f079;
+  --home-link-color: #46bd0f;
   --home-link-hover-color: var(--primary-color);
 
   --button-color: #e5c3d3;
@@ -28,3 +28,4 @@ $breakpoint-xl: 1200px;
   // CSS Grid Utility
   --grid-gap: 30px;
 }
+
