--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -338,7 +338,7 @@ article img {
 .site-footer {
   display: flex;
   align-items: center;
-  background: #eee;
+  background: #0DA860;
   text-align: center;
   font-size: 14px;
   padding: 20px 0;
